2006-01-10 11:15 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerRemoveEdge) to remove and edge from
	current list.
	* src/gridfacer.c (gridfacerSwap) to swap to improve edge length.

2006-01-10 11:15 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSwap) started swapping routine to
	reduce edge ratio.

2006-01-10 08:57 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCreate) forms list of unique
	triangle sides on startup.
	* src/gridfacer.c (gridfacerEdges) return the number of unique
	triangle sides.

2006-01-09 13:36 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerExamine) to list out faces and fix typos.

2006-01-09 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCreate) added a new module modeled
	after gridedger to adapt faces only.

2006-01-09 12:01 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: stop at bob's favorite:
	minimal dammage.

2005-12-04 14:07 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMapPointerAllocated) to unify the use of
	gridMapPointer for speed and gridMap for interpolation,
	added this macro to indicate if gridMapPointer is safe to
	use.
	* src/gridmetric (gridSetMapMatrixToAverageOfNodes2)
	call gridInterpolateMap2 with ratio = 0.5 for DRY.
	* src/gridmetric (gridSetMapMatrixToAverageOfNodes3,
	gridSetMapMatrixToAverageOfNodes4, gridEdgeRatio, gridEdgeRatio3,
	gridAR, gridCellARDerivative ) unified gridMapPointer
	access with gridMapPointerAllocated test and alternate
	calls to gridMap.
	
2005-12-04 13:47 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio) if grid->map is NULL don't use map
	pointers, call gridMap to do interploation.
	* src/grid.c (gridFindEnclosingCell) corrected logic in calls
	to gridFindOtherCellWith3Nodes that allowed the same cell
	to be selected over and over again. (added debug printf with verb)
	* src/grid.c (gridPack,gridRenumber) ignore grid->map if it is NULL
	to prevent segfaults.
	