@@ -1,4 +1,8 @@
-2006-01-10 11:15 Mike Park  <mike.park@nasa.gov>
+2006-01-10 13:29 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfacer.c (gridfacerSplit) split long edges.
+
+2006-01-10 11:56 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridfacer.c (gridfacerRemoveEdge) to remove and edge from
 	current list.
